Got programming running, GUI generation could use some sizing changes but is otherwise good, functionality still needs to be tested. This includes adding basic extra Brainfuck files, and removing Python for now (I'll finish that another day)